Update Week 1-3 exercises - INTERMEDIATE.ipynb

--- a/Notebooks/Week 1-3 exercises - INTERMEDIATE.ipynb
+++ b/Notebooks/Week 1-3 exercises - INTERMEDIATE.ipynb
@@ -387,7 +387,7 @@
         "https://drive.google.com/file/d/1v2SYkCtIX6Pwg7rZyb25-Z2olLI8eNf_/view?usp=sharing\n",
         "```\n",
         "\n",
-        "The ID is everythin between the two forward brackets after `d/` and before `/view`. So: `1v2SYkCtIX6Pwg7rZyb25-Z2olLI8eNf_`\n"
+        "The ID is everything between the two forward brackets after `d/` and before `/view`. So: `1v2SYkCtIX6Pwg7rZyb25-Z2olLI8eNf_`\n"
       ]
     },
     {
@@ -419,26 +419,14 @@
       "metadata": {
         "id": "h7Cd_Ze8BfIs",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "7cb5a400-3d45-435c-d675-1b03cbbd6e8f"
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -447,7 +435,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We can now navigate within our Google Drive folders! "
+        "We can now navigate within our Google Drive folders."
       ]
     },
     {
@@ -455,29 +443,15 @@
       "metadata": {
         "id": "BWrHsWO2Bhii",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "c3bb14dd-13de-4a2d-c9c1-a364f617fb2a"
+        "colab": {}
       },
       "source": [
         "import os \n",
         "os.chdir(\"/content/drive/My Drive/DIGHUM160-resources\") # You may need to change this to point to your location of the \"DIGHUM160-resources\" folder\n",
         "!ls"
       ],
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "AskTrumpSupporters.csv\tmgtow_submissions.csv\t   TRP_comments.csv\n",
-            "ferrante.txt\t\tseduction_submissions.csv  TRP_submissions.csv\n",
-            "knaus.txt\t\ttest.txt\t\t   TRP_submissions_full.csv\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -568,6 +542,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gZOwLYOAkWLX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MvtXxBUnmwYE",
@@ -621,10 +608,7 @@
         "colab": {}
       },
       "source": [
-        "# your code here\n",
-        "\n",
-        "for each in dfNew['body']:\n",
-        "    print(tokenizer(each))"
+        "# your code here\n"
       ],
       "execution_count": null,
       "outputs": []
