Update Week 1-3 exercises - INTERMEDIATE.ipynb

--- a/Notebooks/Week 1-3 exercises - INTERMEDIATE.ipynb
+++ b/Notebooks/Week 1-3 exercises - INTERMEDIATE.ipynb
@@ -498,11 +498,12 @@
         "colab_type": "text"
       },
       "source": [
-        "Now, write a function `tokenizer()` that takes as input a string. Make sure that the function:\n",
-        "- turns the string into lower case \n",
-        "- cleans up punctuation (you can use regex, a custom list, or the inbuilt `string.punctuation` package)\n",
-        "- puts al words in a list\n",
-        "- returns said list"
+        "Now, we'll write a function `tokenizer()` that takes as input a string. There are lots of ways to do this, but here's one option.\n",
+        "- turn the string into lower case \n",
+        "- remove newlines and tabs using `translate`\n",
+        "- clean up punctuation using `translate` and `string.punctuation`\n",
+        "- put all words in a list after removing digits\n",
+        "- return said list"
       ]
     },
     {
