Update Week 2-3 Reddit Distant Reading.ipynb

--- a/Notebooks/Week 2-3 Reddit Distant Reading.ipynb
+++ b/Notebooks/Week 2-3 Reddit Distant Reading.ipynb
@@ -126,8 +126,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## Getting Reddit data\n",
-        "Let's authenticate ourselves and get the data.\n"
+        "## Retrieving the dataset\n",
+        "Let's authenticate ourselves and get the dataset from Google Drive.\n"
       ]
     },
     {
@@ -160,7 +160,7 @@
       },
       "source": [
         "downloaded = drive.CreateFile({'id':\"1fOe3l9dLKb51jrwqUNOvwO4A7F7sM6Xx\"})   # replace the id with id of file you want to access\n",
-        "downloaded.GetContentFile('seduction-submissions.csv')        # replace the file name with your file"
+        "downloaded.GetContentFile('seduction-submissions.csv')       "
       ],
       "execution_count": null,
       "outputs": []
