Update Week 2-4 Preprocessing & Tf-idf.ipynb

--- a/Notebooks/Week 2-4 Preprocessing & Tf-idf.ipynb
+++ b/Notebooks/Week 2-4 Preprocessing & Tf-idf.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "Today's notebook is pretty long! \n",
         "\n",
-        "We will (1) learn how to preprocess text in a DataFrame, and (2) learn to implement tf-idf. Tf-idf allows us to compare different related subreddits, in order to find the most distinctive words in a particular subreddit. It can also help us to find similar posts to ones we're interested in.\n",
+        "We will (1) learn how to preprocess text from a reddit DataFrame, and (2) learn to implement tf-idf. Tf-idf allows us to compare different related subreddits, in order to find the most distinctive words in a particular subreddit. It can also help us to find similar posts to ones we're interested in.\n",
         "\n",
         "Please read the instructions and fill in the coding assignments throughout the notebook. \n",
         "\n",
